--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,6 +28,8 @@ phases:
 
       - echo "Build completed successfully"
 
+      - aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
+
 
 
 artifacts:
